--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    Hola a todos. Esta es la primer prueba de cambio.
+    <script>
+    'use strict';
+
+    let name = prompt("What is your name?", "");
+    alert(name);
+  </script>
 </body>
 </html>
