--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     'use strict';
 
     let name = prompt("What is your name?", "");
-    alert(name);
+    alert(`Bienvenido {name}!`);
   </script>
 </body>
 </html>
